<resources>
    <string name="app_name">Kodi Remote</string>
    <string name="host_button">Connect</string>
    <string name="ip_pompt">Please enter the Host IP Address</string>
    <string name="ip_field_hint">Enter IP here</string>
    <string name="select_button">Select</string>
    <string name="back_button">Back</string>
    <string name="home_button">Home</string>
    <string name="info_button">Info</string>
    <string name="invalid_ip">IP address is not valid</string>
    <string name="addons_button">Addons</string>
    <string name="power_button">Power</string>
    <string name="power_off_message">Are you sure you want to turn off Kodi?</string>
    <string name="power_off_confirm">Yes</string>
    <string name="power_off_cancel">Cancel</string>
    <string name="context_menu_button">Menu</string>
</resources>
