<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_host"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="scarneado.com.kodiremote.HostActivity">

    <TextView
        android:id="@+id/ip_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ip_pompt"
        android:layout_centerInParent="false"
        android:layout_centerHorizontal="true"
        tools:textSize="18sp"
        tools:textStyle="bold" />

    <Button
        android:text="@string/host_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:id="@+id/button"
        android:layout_below="@+id/ip_text_field"
        android:layout_centerHorizontal="true"
        android:onClick="newIP"/>

    <EditText
        android:id="@+id/ip_text_field"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/ip_field_hint"
        android:layout_marginTop="39dp"
        android:layout_below="@+id/ip_label"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:text="@string/invalid_ip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:id="@+id/bad_IP_text_view"
        android:visibility="invisible"
        android:textColor="@android:color/holo_red_dark" />

</RelativeLayout>
